--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
       <title>Rori's Wine And Cheese Pairing App</title>
       <link href="style.css" rel="stylesheet" media="screen">
-      <link href="script.js" rel="stylesheet" media="screen">
-      <link href="wine-cheese-final.json">
+      <link href="data.json">
   </head>
 <body>
   <h1> Hello! </h1>
     <p>Welcome to my wine and cheese pairing app. This app will help you decide which red wines to pair with cheese. Note– There are only a few wines and cheeses, but for more visit <a href="https://vinepair.com/wine-cheese-pairing-app/">VinePair</a>. If you're looking to learn more about wine, check out <a href="http://www.winespectator.com/">Wine Spectator's website</a>. They have all the information your could need to learn more about what you're drinking.</p>
-
+    <script src="data.json">
 </body>
 </html>
