--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   </head>
 <body>
   <h1> Hello! </h1>
-    <p>Welcome to my wine and cheese pairing app. This app will help you decide which red wines to pair with cheese. Note– There are only a few wines and cheeses, but for more visit <a href="https://vinepair.com/wine-cheese-pairing-app/">VinePair</a>. If you're looking to learn more about wine, check out <a href="http://www.winespectator.com/">Wine Spectator's website</a>. They have all the information your could need to learn more about what you're drinking.</p>
     <script src="data.json"/>
-    <p>Note: This information was adapted from <a href="http://www.wineandcheesemap.com/">this wine and cheese pairing interactive graphic</a>from the researchers at the University of Toronto.</p>
+      <p>Welcome to my wine and cheese pairing app. This app will help you decide which red wines to pair with cheese. Note– There are only a few wines and cheeses, but for more visit <a href="https://vinepair.com/wine-cheese-pairing-app/">VinePair</a>. If you're looking to learn more about wine, check out <a href="http://www.winespectator.com/">Wine Spectator's website</a>. They have all the information your could need to learn more about what you're drinking.</p>
+    <script src="script.js"/>
+      <p>Note: This information was adapted from <a href="http://www.wineandcheesemap.com/">this wine and cheese pairing interactive graphic</a>from the researchers at the University of Toronto.</p>
 </body>
 </html>
