--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
   <h1> Hello! </h1>
       <p>Welcome to my wine and cheese pairing app. This app will help you decide which red wines to pair with cheese. Note– There are only a few wines and cheeses, but for more visit <a href="https://vinepair.com/wine-cheese-pairing-app/">VinePair</a>. If you're looking to learn more about wine, check out <a href="http://www.winespectator.com/">Wine Spectator's website</a>. They have all the information your could need to learn more about what you're drinking.</p>
-        <img src="svgs/blue.svg" alt="classic blue cheese">
-        <img src="svgs/cheddar.svg" alt="cheddar cheese">
-        <img src="svgs/epoisse.svg" alt="epoisses de bourgogne">
-        <img src="svgs/gruyere.svg" alt="gruyere cheese">
-        <img src="svgs/manchego.svg" alt="manchego cheese">
-        <img src="svgs/parm.svg" alt="parmigiano-reggiano cheese">
+        <div class="blue"><img src="svgs/blue.svg" alt="classic blue cheese"></div>
+        <div class="cheddar"><img src="svgs/cheddar.svg" alt="cheddar cheese"></div>
+        <div class="epoisses"><img src="svgs/epoisse.svg" alt="epoisses de bourgogne"></div>
+        <div class="gruyere"><img src="svgs/gruyere.svg" alt="gruyere cheese"></div>
+        <div class="manchego"><img src="svgs/manchego.svg" alt="manchego cheese"></div>
+        <div class="parm"><img src="svgs/parm.svg" alt="parmigiano-reggiano cheese"></div>
     <script src="script.js"/>
       <p>Note: This information was adapted from <a href="http://www.wineandcheesemap.com/">this wine and cheese pairing interactive graphic</a>from the researchers at the University of Toronto.</p>
 </body>
