Cut out some cheese in photoshop

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <h1>CHEESE, PLEASE.</h1>
       <p>Welcome to my wine and cheese pairing app. This app will help you decide which red wines to pair with cheese. Note– There are only a few wines and cheeses, but for more visit <a href="https://vinepair.com/wine-cheese-pairing-app/">VinePair</a>. If you're looking to learn more about wine, check out <a href="http://www.winespectator.com/">Wine Spectator's website</a>. They have all the information your could need to learn more about what you're drinking.</p>
       <div class="container">
-        <div class="blue"><img src="imgs/blue.jpg" alt="classic blue cheese"></div>
-        <div class="cheddar"><img src="imgs/cheddar.jpg" alt="cheddar cheese"></div>
+        <div class="blue"><img src="imgs/blue2.png" alt="classic blue cheese"></div>
+        <div class="cheddar"><img src="imgs/cheddar.png" alt="cheddar cheese"></div>
         <div class="epoisses"><img src="imgs/epoisses.jpg" alt="epoisses de bourgogne"></div>
         <div class="gruyere"><img src="imgs/gruyere.jpg" alt="gruyere cheese"></div>
-        <div class="manchego"><img src="imgs/manchego.jpg" alt="manchego cheese"></div>
-        <div class="parm"><img src="imgs/parm.png" alt="parmigiano-reggiano cheese"></div>
+        <div class="manchego"><img src="imgs/manchego.png" alt="manchego cheese"></div>
+        <div class="parm"><img src="imgs/parm1.png" alt="parmigiano-reggiano cheese"></div>
       </div>
     <script src="script.js"/>
       <p>Note: This information was adapted from <a href="http://www.wineandcheesemap.com/">this wine and cheese pairing interactive graphic</a>from the researchers at the University of Toronto.</p>
