Added all cut outs

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <div class="container">
         <div class="blue"><img src="imgs/blue2.png" alt="classic blue cheese"></div>
         <div class="cheddar"><img src="imgs/cheddar.png" alt="cheddar cheese"></div>
-        <div class="epoisses"><img src="imgs/epoisses.jpg" alt="epoisses de bourgogne"></div>
-        <div class="gruyere"><img src="imgs/gruyere.jpg" alt="gruyere cheese"></div>
+        <div class="epoisses"><img src="imgs/epoisses.png" alt="epoisses de bourgogne"></div>
+        <div class="gruyere"><img src="imgs/gruyere.png" alt="gruyere cheese"></div>
         <div class="manchego"><img src="imgs/manchego.png" alt="manchego cheese"></div>
         <div class="parm"><img src="imgs/parm1.png" alt="parmigiano-reggiano cheese"></div>
       </div>
