Turned it into a png

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="epoisses"><img src="imgs/epoisses.png" alt="epoisses de bourgogne"></div>
         <div class="gruyere"><img src="imgs/gruyere.png" alt="gruyere cheese"></div>
         <div class="manchego"><img src="imgs/manchego.png" alt="manchego cheese"></div>
-        <div class="parm"><img src="svgs/parm.svg" alt="parmigiano-reggiano cheese"></div>
+        <div class="parm"><img src="imgs/parm3.png" alt="parmigiano-reggiano cheese"></div>
       </div>
     <script src="script.js"/>
       <p>Note: This information was adapted from <a href="http://www.wineandcheesemap.com/">this wine and cheese pairing interactive graphic</a>from the researchers at the University of Toronto.</p>
