--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <title>Rori's Wine And Cheese Pairing App</title>
+      <title>Wine And Cheese Pairing App</title>
       <link href="style.css" rel="stylesheet" media="screen">
       <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
   </head>
