--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
 </nav>
 </header>
 
+<!-- Trigger/Open The Modal -->
+<button id="myBtn">Open Modal</button>
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>This cheese pairs best with: </p>
+  </div>
+
+</div>
+
   <h1>CHEESE, PLEASE.</h1>
       <p>Welcome to my wine and cheese pairing app. This app will help you decide which red wines to pair with cheese. Note– There are only a few wines and cheeses, but for more visit <a href="https://vinepair.com/wine-cheese-pairing-app/">VinePair</a>. If you're looking to learn more about wine, check out <a href="http://www.winespectator.com/">Wine Spectator's website</a>. They have all the information your could need to learn more about what you're drinking.</p>
       <!--this is the beginning of blue-->
