Edited text and changed name of file

--- a/cheese-pair.html
+++ b/cheese-pair.html
@@ -23,7 +23,7 @@
   <h1>CHEESE, PLEASE.</h1>
       <p>Welcome to my wine and cheese pairing app. This app will help you decide which red wines to pair with cheese. Note– there are only a few wines and cheeses, but for more visit <a href="https://vinepair.com/wine-cheese-pairing-app/">VinePair</a>. If you're looking to learn more about wine, check out <a href="http://www.winespectator.com/">Wine Spectator's website</a>. They have all the information your could need to learn more about what you're drinking.</p>
 
-      <p>To use this app, just click on the type of cheese you'd like to eat and you'll be given a wine pairing.</p>
+      <p>To use this app, just click on the button with type of cheese you'd like to eat and you'll be given a wine pairing.</p>
 
       <p id="source">Note: This information was adapted from <a href="http://www.wineandcheesemap.com/">this wine and cheese pairing interactive graphic</a> from the researchers at the University of Toronto.</p>
       <!--this is the beginning of blue-->
