Added modal box thing

--- a/cheese-pair.html
+++ b/cheese-pair.html
@@ -247,7 +247,7 @@
 </svg>
 
 <!-- Trigger/Open The Modal -->
-<button id="myBtn">Classic Blue</button>
+<button id="myBtn", "classicbluebutton">Classic Blue</button>
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
