--- a/cheese-pair.html
+++ b/cheese-pair.html
@@ -1136,7 +1136,7 @@
 </div> <!-- close container -->
 
           <div>
-             <p id="cheesename">CHE</p>
+             <p id="cheesename"></p>
            </div>
 
 
