Moved script tag

--- a/cheese-pair.html
+++ b/cheese-pair.html
@@ -8,7 +8,7 @@
       <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
   </head>
 <body>
-  <script src="data.json"></script>
+  <!-- <script src="data.json"></script> -->
   <header>
 <nav>
   <ul>
@@ -1141,6 +1141,7 @@
 
 
 <script src="script4.js"></script>
+<script src="data.json"></script>
 <!---non breaking line space-->
 
 
