Added some styles to the modal

--- a/cheese-pair.html
+++ b/cheese-pair.html
@@ -1135,7 +1135,7 @@
 </div>
 </div> <!-- close container -->
 
-          <div>
+          <div id="modal">
              <p id="cheesename"></p>
            </div>
 
