Added a close button

--- a/cheese-pair.html
+++ b/cheese-pair.html
@@ -1137,6 +1137,7 @@
 
           <div id="modal">
              <p id="cheesename"></p>
+             <button id="closebutton">Close</button>
            </div>
 
 
