--- a/cheese-pair.html
+++ b/cheese-pair.html
@@ -1143,6 +1143,9 @@
 
 <script src="script4.js"></script>
 <script src="data.json"></script>
+<script src="jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+
 <!---non breaking line space-->
 
 
